--- a/sunnyside-agency-landing-page-main/style/style.css
+++ b/sunnyside-agency-landing-page-main/style/style.css
@@ -151,7 +151,6 @@ header::after {
 .services {
    display: grid;
    grid-template-columns: 1fr 1fr;
-   padding: 0;
 }
 
 .services__content {
@@ -164,7 +163,6 @@ header::after {
    left: 50%;
    transform: translate(-50%, 0%);
    text-align: center;
-   max-width: 40ch;
 }
 
 .services__content__text h3 {
@@ -177,6 +175,7 @@ header::after {
 .services__content__text p {
    font-size: 1rem;
    line-height: 1.5;
+   min-width: 350px;
 }
 
 .text-graphic {
@@ -193,6 +192,8 @@ header::after {
    color: hsl(213, 9%, 39%);
    margin-top: 160px;
    margin-bottom: 160px;
+   padding-left: 20px;
+   padding-right: 20px;
 }
 
 .testimonials h2 {
@@ -249,15 +250,51 @@ header::after {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-
-.projects img {
+/* -------------CONTACT-------------- */
+.contact {
+   background-color: hsl(168, 29%, 57%);
+   padding-top: 80px;
 }
 
-/* -------------FOOTER-------------- */
+.contact > img {
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 40px;
+   width: 160px;
+   fill: #2c7566;
+}
+
+.contact__links {
+   text-align: center;
+   display: flex;
+   place-content: center;
+   margin-bottom: 60px;
+   gap: 20px;
+}
+
+.contact__links a {
+   color: #2c7566;
+   padding: 12px 12px;
+   font-size: 1.2rem;
+}
+
+.contact__social {
+   display: flex;
+   place-content: center;
+   gap: 10px;
+   margin-bottom: 60px;
+}
+
+.contact__social a {
+   padding: 10px;
+}
+
 .attribution {
    font-size: 11px;
    text-align: center;
+   padding: 10px;
+   color: #2c7566;
 }
 .attribution a {
-   color: hsl(228, 45%, 44%);
+   color: white;
 }
